Fix: Integration test run in separate jvms